_x/mm_large/mm_large/mm_large/solution/.autopilot/db/clang.err.log
../../../kernels/mm_large.cpp:40:2: error: no matching function for call to 'read_block'
 read_block(A + ti*K, local_A, 256, 128, K);
 ^~~~~~~~~~
/home/wanqi/Wanqi/project/charm_u50/kernels/utils.h:8:6: note: candidate template ignored: couldn't infer template argument 'DIM1'
void read_block(const T* src, T dst[DIM1][DIM2], int rows, int cols, int ld) {
     ^
../../../kernels/mm_large.cpp:41:13: error: no matching function for call to 'read_block'
            read_block(B + tj, local_B, 128, 256, N);
            ^~~~~~~~~~
/home/wanqi/Wanqi/project/charm_u50/kernels/utils.h:8:6: note: candidate template ignored: couldn't infer template argument 'DIM1'
void read_block(const T* src, T dst[DIM1][DIM2], int rows, int cols, int ld) {
     ^
../../../kernels/mm_large.cpp:55:13: error: no matching function for call to 'write_block'
            write_block(C + ti*N + tj, local_C, 256, 256, N);
            ^~~~~~~~~~~
/home/wanqi/Wanqi/project/charm_u50/kernels/utils.h:18:6: note: candidate template ignored: couldn't infer template argument 'DIM1'
void write_block(T* dst, const T src[DIM1][DIM2], int rows, int cols, int ld) {
     ^
3 errors generated.
